fixed counter misalignment in question list

--- a/qa-styles.less
+++ b/qa-styles.less
@@ -1115,7 +1115,6 @@ h2 {
 
 .qa-netvote-count-data {
   display: block;
-  padding-top: 1px;
   font-size: @counterlarge;
   font-weight: bold;
   line-height: 1;
